--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@
   src: url("./fonts/Sweet\ Romance.ttf") format("truetype");
 }
 #styled_text_area {
+  width: 80%;
+  margin-left: 12%;
   height: 90%;
   font-size: calc(40px + 0.390625vw);
   padding: 30px 10px;
@@ -54,7 +56,7 @@ span.choose {
 
 /*Styling Selectbox*/
 .dropdown {
-  width: 300px;
+  width: 200px;
   display: inline-block;
   background-color: #fff;
   border-radius: 2px;
@@ -125,13 +127,14 @@ span.choose {
 }
 .group {
   position: relative;
+  margin-left: 20%;
   margin-bottom: 45px;
 }
 input {
   font-size: 18px;
   padding: 10px 10px 10px 5px;
   display: block;
-  width: 100%;
+  width: 80%;
   border: none;
   border-bottom: 1px solid #757575;
 }
@@ -165,7 +168,7 @@ input:valid ~ label {
 .bar {
   position: relative;
   display: block;
-  width: 100%;
+  width: 80%;
 }
 .bar:before,
 .bar:after {
