--- a/style.css
+++ b/style.css
@@ -40,6 +40,15 @@ body {
     rgba(0, 212, 255, 1) 100%
   );
 }
+footer {
+  text-align: center;
+  background-color: #999;
+  color: #e2e2e2;
+}
+#logo {
+  margin-bottom: 5px;
+}
+
 span.msg,
 span.choose {
   color: #555;
