--- a/style.css
+++ b/style.css
@@ -39,9 +39,10 @@ body {
     rgba(231, 105, 203, 1) 35%,
     rgba(0, 212, 255, 1) 100%
   );
+  height: 90vh;
 }
 section {
-  min-height: calc(100vh - 47px);
+  min-height: calc(90vh - 18px);
 }
 footer {
   text-align: center;
